2008-10-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* libs/gst/base/gstbytereader.c: (gst_byte_reader_get_uint24_le),
	(gst_byte_reader_get_uint24_be), (gst_byte_reader_get_int24_le),
	(gst_byte_reader_get_int24_be), (gst_byte_reader_peek_uint24_le),
	(gst_byte_reader_peek_uint24_be), (gst_byte_reader_peek_int24_le),
	(gst_byte_reader_peek_int24_be):
	Use new GST_READ_UINT24_(LE|BE) macros.

2008-10-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* docs/gst/gstreamer-sections.txt:
	* gst/gstutils.h:
	Always use the unaligned variants of GST_READ_UINT* and GST_WRITE_UINT*
	as it's too easy to break the ISO C strict aliasing rules with simple
	casts to the corresponding type and this would introduce hard to debug
	bugs. Fixes bug #545714.

	API: Add GST_READ_UINT24_(LE|BE) and GST_WRITE_UINT24_(LE|BE).

2008-10-07  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstbuffer.h: (GST_BUFFER_FREE_FUNC):
	* gst/gstghostpad.c: (gst_ghost_pad_construct):
	  Add 'Since' bits to gtk-doc chunks for new API.

2008-10-06  Thijs Vermeir  <thijsvermeir@gmail.com>

	* docs/gst/gstreamer-sections.txt:
	Fix documentation

2008-10-06  Andy Wingo  <wingo@pobox.com>

	* gst/gstbuffer.h (GST_BUFFER_FREE_FUNC): New API, a free function
	that will be called on the malloc_data to free it. Basically a way
	to avoid subclassing when all you need is a different free
	function, i.e. free() instead of g_free().

	* gst/gstbuffer.c (gst_buffer_finalize): Free malloc_data via
	calling the free function.
	(gst_buffer_init): Initialize the free function to g_free.

2008-10-06  Andy Wingo  <wingo@pobox.com>

	* gst/gstghostpad.h:
	* gst/gstghostpad.c (gst_ghost_pad_construct): New function,
	finishes the initialization of ghost pad. Useful for language
	bindings and subclassers of GstGhostPad. Fixes #539108.
	(gst_ghost_pad_new_full): Use the new constructor.

2008-10-06  Wim Taymans  <wim.taymans@collabora.co.uk>
