@@ -42,9 +42,14 @@
 #include "struct_hppa.h"
 #define HAVE_ABI_SIZES TRUE
 #else
+#ifdef HAVE_CPU_SPARC
+#include "struct_sparc.h"
+#define HAVE_ABI_SIZES TRUE
+#else
 /* in case someone wants to generate a new arch */
 #include "struct_i386.h"
 #define HAVE_ABI_SIZES FALSE
+#endif
 #endif
 #endif
 #endif
